Adicionado Fluxo de Refund e Widgets de parcelamentos

--- a/view/frontend/web/template/payment/pagaleve.html
+++ b/view/frontend/web/template/payment/pagaleve.html
@@ -42,7 +42,7 @@
                             <div class="pagaleve-card-info">
                                 <span class="pagaleve-card-title" translate="'4 fortnightly installments'"></span>
                                 <p class="pagaleve-card-subtitle">
-                                    <span translate="'The first installment is paid on the spot, the other three'"></span>
+                                    <span translate="'the first installment is paid on the spot, the other three'"></span>
                                     <span class="emphasis" translate="'every 15 days'"></span>
                                 </p>
                             </div>
@@ -51,7 +51,7 @@
                             <div class="pagaleve-bag"></div>
                             <div class="pagaleve-card-info">
                                 <p class="pagaleve-card-title" translate="'no card'"></p>
-                                <p class="pagaleve-card-subtitle" translate="'Our installment is done by PIX, with approval in seconds'"></p>
+                                <p class="pagaleve-card-subtitle" translate="'our installment is done by pix, with approval in seconds'"></p>
                             </div>
                         </li>
                     </ul>
