--- a/view/adminhtml/templates/sales/order/info/pagaleve.phtml
+++ b/view/adminhtml/templates/sales/order/info/pagaleve.phtml
@@ -17,12 +17,15 @@ $order = $block->getOrder();
                 <div class="order-payment-additional">
                     <strong><?= __('Payment ID') ?>: </strong><?= $order->getData('pagaleve_payment_id') ?>
                 </div>
-                <?php foreach ($order->getInvoiceCollection() as $invoice) :  ?>
+                <div class="order-payment-additional">
+                    <strong><?= __('Release ID') ?>: </strong><?= $order->getData('pagaleve_release_id') ?>
+                </div>
+                <?php foreach ($order->getInvoiceCollection() as $invoice): ?>
                     <div class="order-payment-additional">
                         <strong><?= __('Capture ID') ?>: </strong><?= $invoice->getData('pagaleve_capture_id') ?>
                     </div>
                 <?php endforeach;  ?>
-                <?php foreach ($order->getCreditmemosCollection() as $creditMemo) :  ?>
+                <?php foreach ($order->getCreditmemosCollection() as $creditMemo):  ?>
                     <div class="order-payment-additional">
                         <strong><?= __('Refund ID') ?>: </strong><?= $creditMemo->getData('pagaleve_refund_id') ?>
                     </div>
