--- a/view/adminhtml/templates/sales/order/info/pagaleve.phtml
+++ b/view/adminhtml/templates/sales/order/info/pagaleve.phtml
@@ -17,9 +17,11 @@ $order = $block->getOrder();
                 <div class="order-payment-additional">
                     <strong><?= __('Payment ID') ?>: </strong><?= $order->getData('pagaleve_payment_id') ?>
                 </div>
-                <div class="order-payment-additional">
-                    <strong><?= __('Release ID') ?>: </strong><?= $order->getData('pagaleve_release_id') ?>
-                </div>
+                <?php if ($order->getData('pagaleve_release_id')) : ?>
+                    <div class="order-payment-additional">
+                        <strong><?= __('Release ID') ?>: </strong><?= $order->getData('pagaleve_release_id') ?>
+                    </div>
+                <?php endif; ?>
                 <?php foreach ($order->getInvoiceCollection() as $invoice): ?>
                     <div class="order-payment-additional">
                         <strong><?= __('Capture ID') ?>: </strong><?= $invoice->getData('pagaleve_capture_id') ?>
