--- a/view/frontend/web/template/payment/pagaleve.html
+++ b/view/frontend/web/template/payment/pagaleve.html
@@ -64,12 +64,12 @@
                         type="submit"
                         data-bind="
                         click: placeOrder,
-                        attr: {title: $t('Place Order')},
+                        attr: {title: $t('Place Order at Pagaleve')},
                         css: {disabled: !isPlaceOrderActionAllowed()},
                         enable: (getCode() == isChecked())
                         "
                         disabled>
-                    <span data-bind="i18n: 'Place Order'"></span>
+                    <span data-bind="i18n: 'Place Order at Pagaleve'"></span>
                 </button>
             </div>
         </div>
