Gravação pedido Magento2

--- a/view/frontend/web/css/source/_checkout.less
+++ b/view/frontend/web/css/source/_checkout.less
@@ -14,6 +14,10 @@
         display: inline-block;
         text-decoration: underline;
     }
+    background-image: url('https://assets.pagaleve.com.br/checkout/split.png');
+    background-repeat: no-repeat;
+    min-height: 400px;
+    background-size: contain;
 }
 .pagaleve-logo {
     object-fit: none;
