--- a/view/frontend/web/template/payment/pagaleve.html
+++ b/view/frontend/web/template/payment/pagaleve.html
@@ -30,32 +30,7 @@
                 <!-- ko template: getTemplate() --><!-- /ko -->
             <!--/ko-->
             <fieldset class="box-payment-group2 box-payment-option box-payment-Pagaleve PagalevePaymentGroup" style="border: none;">
-                <div class="pagaleve-container">
-                    <div class="pagaleve-logo"></div>
-                    <p class="pagaleve-title">
-                        <span translate="'PIX paid in 4x'"></span>
-                        <span class="emphasis" translate="'interest-free'"></span>
-                    </p>
-                    <ul class="pagaleve-cards">
-                        <li class="pagaleve-card">
-                            <div class="pagaleve-bill"></div>
-                            <div class="pagaleve-card-info">
-                                <span class="pagaleve-card-title" translate="'4 fortnightly installments'"></span>
-                                <p class="pagaleve-card-subtitle">
-                                    <span translate="'the first installment is paid on the spot, the other three'"></span>
-                                    <span class="emphasis" translate="'every 15 days'"></span>
-                                </p>
-                            </div>
-                        </li>
-                        <li class="pagaleve-card">
-                            <div class="pagaleve-bag"></div>
-                            <div class="pagaleve-card-info">
-                                <p class="pagaleve-card-title" translate="'no card'"></p>
-                                <p class="pagaleve-card-subtitle" translate="'our installment is done by pix, with approval in seconds'"></p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+                <div class="pagaleve-container"></div>
             </fieldset>
         </div>
         <div class="actions-toolbar">
