--- a/view/frontend/web/css/source/_checkout.less
+++ b/view/frontend/web/css/source/_checkout.less
@@ -18,6 +18,7 @@
     background-repeat: no-repeat;
     min-height: 400px;
     background-size: contain;
+    background-position: center;
 }
 .pagaleve-logo {
     object-fit: none;
