Pix a Vista Magento 2

--- a/view/adminhtml/templates/sales/order/info/pagaleve_upfront.phtml
+++ b/view/adminhtml/templates/sales/order/info/pagaleve_upfront.phtml
@@ -1,4 +1,5 @@
 <?php
+
 /**
  * @author      FCamara - Formação e Consultoria <contato@fcamara.com.br>
  * @author      Guilherme Miguelete <guilherme.miguelete@fcamara.com.br>
@@ -16,7 +17,7 @@ $order = $block->getOrder();
     <div class="admin__page-section-content">
         <div class="admin__page-section-item order-payment-method pagaleve">
             <div class="admin__page-section-item-title">
-                <span class="title"><?= $block->escapeHtml(__('Pagaleve - PIX paid in 4x')) ?></span>
+                <span class="title"><?= $block->escapeHtml(__('Pagaleve - PIX UpFront')) ?></span>
             </div>
             <div class="admin__page-section-item-content">
                 <div class="order-payment-additional" style="min-width: 400px;">
@@ -27,9 +28,9 @@ $order = $block->getOrder();
                 </div>
                 <?php if ($order->getData('pagaleve_expiration_date')) : ?>
                     <div class="order-payment-additional" style="min-width: 400px;">
-                    <strong><?= __('Release Date') ?>: </strong>
-                    <?= $block->formatDate($order->getData('pagaleve_expiration_date'), 3, true) ?>
-                </div>
+                        <strong><?= __('Release Date') ?>: </strong>
+                        <?= $block->formatDate($order->getData('pagaleve_expiration_date'), 3, true) ?>
+                    </div>
                 <?php endif; ?>
             </div>
         </div>
