--- a/view/frontend/web/css/source/_checkout.less
+++ b/view/frontend/web/css/source/_checkout.less
@@ -1,4 +1,4 @@
-.pagaleve-container {
+.pagaleve-container, .pagaleve-upfront-container {
     margin: 0;
     padding: 0;
     border: 0;
@@ -14,11 +14,16 @@
         display: inline-block;
         text-decoration: underline;
     }
-    background-image: url('https://assets.pagaleve.com.br/checkout/split.png');
     background-repeat: no-repeat;
     min-height: 400px;
     background-size: contain;
     background-position: center;
+}
+.pagaleve-container {
+    background-image: url('https://assets.pagaleve.com.br/checkout/split.png');
+}
+.pagaleve-upfront-container {
+    background-image: url('https://assets.pagaleve.com.br/checkout/upfront.png');
 }
 .pagaleve-logo {
     object-fit: none;
