--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -33,6 +33,14 @@
 																		</item>
 																	</item>
 																</item>
+																<item name="pagaleve_upfront" xsi:type="array">
+																	<item name="component" xsi:type="string">Pagaleve_Payment/js/view/payment/pagaleve_upfront</item>
+																	<item name="methods" xsi:type="array">
+																		<item name="pagaleve_upfront" xsi:type="array">
+																			<item name="isBillingAddressRequired" xsi:type="boolean">true</item>
+																		</item>
+																	</item>
+																</item>
 															</item>
 														</item>
 													</item>
